@@ -1,4 +1,4 @@
-# This data file was generated by SC-IM.
+# This data file was generated by the Spreadsheet Calculator Improvised (SC-IM)
 # You almost certainly shouldn't edit it.
 
 label A0 = "mes"
@@ -17,20 +17,150 @@ label A6 = "junio"
 let B6 = 30
 label A7 = "julio"
 let B7 = 40
+label A8 = "agosto"
+let B8 = 12
+label A9 = "septiembre"
+let B9 = 8
+label A10 = "octubre"
+let B10 = 1
+label A11 = "noviembre"
+let B11 = 2
+label A12 = "diciembre"
+let B12 = 3
 label D12 = "mes"
 label E12 = "costo"
+label A13 = "enero"
+let B13 = 6
 label D13 = "enero"
 let E13 = -23
+label A14 = "febrero"
+let B14 = 1
 label D14 = "febrero"
 let E14 = 15
+label A15 = "marzo"
+let B15 = 7
 label D15 = "marzo"
 let E15 = 6
+label A16 = "abril"
+let B16 = 6
 label D16 = "abril"
 let E16 = 8
+label A17 = "mayo"
+let B17 = 5
 label D17 = "mayo"
 let E17 = 10
+label A18 = "junio"
+let B18 = 4
 label D18 = "junio"
 let E18 = 30
+label A19 = "julio"
+let B19 = 2
 label D19 = "julio"
 let E19 = 40
+label A20 = "agosto"
+let B20 = 9
+label A21 = "septiembre"
+let B21 = 1
+label A22 = "octubre"
+let B22 = 2
+label A23 = "noviembre"
+let B23 = 4
+label A24 = "diciembre"
+let B24 = 5
+label A25 = "enero"
+let B25 = 3
+label A26 = "febrero"
+let B26 = 7
+label A27 = "marzo"
+let B27 = 6
+label A28 = "abril"
+let B28 = 3
+label A29 = "mayo"
+let B29 = 7
+label A30 = "junio"
+let B30 = 5
+label A31 = "julio"
+let B31 = 3
+label A32 = "agosto"
+let B32 = 1
+label A33 = "septiembre"
+let B33 = 12
+label A34 = "octubre"
+let B34 = 18
+label A35 = "noviembre"
+let B35 = 15
+label A36 = "diciembre"
+let B36 = 7
+label A37 = "enero"
+let B37 = 1
+label A38 = "febrero"
+let B38 = 5
+label A39 = "marzo"
+let B39 = 6
+label A40 = "abril"
+let B40 = 5
+label A41 = "mayo"
+let B41 = 4
+label A42 = "junio"
+let B42 = 8
+label A43 = "julio"
+let B43 = 7
+label A44 = "agosto"
+let B44 = 6
+label A45 = "septiembre"
+let B45 = 1
+label A46 = "octubre"
+let B46 = 2
+label A47 = "noviembre"
+let B47 = 7
+label A48 = "diciembre"
+let B48 = 6
+label A49 = "enero"
+let B49 = 5
+label A50 = "febrero"
+let B50 = 4
+label A51 = "marzo"
+let B51 = 3
+label A52 = "abril"
+let B52 = 8
+label A53 = "mayo"
+let B53 = 7
+label A54 = "junio"
+let B54 = 1
+label A55 = "julio"
+let B55 = 5
+label A56 = "agosto"
+let B56 = 2
+label A57 = "septiembre"
+let B57 = 7
+label A58 = "octubre"
+let B58 = 6
+label A59 = "noviembre"
+let B59 = 3
+label A60 = "diciembre"
+let B60 = 4
+label A61 = "enero"
+let B61 = 5
+label A62 = "febrero"
+let B62 = 7
+label A63 = "marzo"
+let B63 = 6
+label A64 = "abril"
+let B64 = 8
+label A65 = "mayo"
+let B65 = 1
+label A66 = "junio"
+let B66 = 6
+label A67 = "julio"
+let B67 = 4
+label A68 = "agosto"
+let B68 = 6
+label A69 = "septiembre"
+let B69 = 5
+label A70 = "octubre"
+let B70 = 2
+label A71 = "noviembre"
+let B71 = 8
+label A72 = "diciembre"
+let B72 = 6
 goto A0
