@@ -2327,15 +2327,18 @@ int calc_offscr_sc_rows() {
 
     // pick up row counts
     // row  : number of NCURSES screen lines counted (for entire grid). must be <= LINES
-    // rows : number de sc rows shown on grid
+    // rows : number de sc rows shown on grid. if you have hidden rows, those get counted.
     // fmtbef : number of NCURSES screen lines (because of frozen rows) before offscr_sc_rows
-    //count:
+    count:
     for (i = 0, rows = 0, fmtbef = 0, row = RESROW + RESCOLHEADER, numbef = 0; i < maxrows && row + row_format[i] <= LINES; i++) {
         if (offscr_sc_rows - fmtbef + rows > maxrows) {
             return rows - num_frozen_after_rows - numbef;
             break;
         }
-        if (row_hidden[i]) continue;
+        if (row_hidden[i]) {
+            if (i >= offscr_sc_rows) rows++;
+            continue;
+        }
         if (row_frozen[i] || i >= offscr_sc_rows) {
             rows++;
             row += row_format[i];
@@ -2366,22 +2369,23 @@ int calc_offscr_sc_rows() {
         }
         //rows--;
     }
-    //if (fmtaft) sc_info("off:%d i:%d fmtaft:%d rows:%d", offscr_sc_rows, i, fmtaft, rows);
 
+    int changed = offscr_sc_rows;
     while ( offscr_sc_rows + rows - 1 - numbef - num_frozen_after_rows < currow || currow < offscr_sc_rows) {
-
         if (offscr_sc_rows - fmtbef + rows > maxrows) {
             if (row == LINES) offscr_sc_rows++;
             break;
-        }
-        else if (offscr_sc_rows - fmtbef - 1 == currow) { offscr_sc_rows--; }
-        else if (offscr_sc_rows + rows - 1 - numbef - num_frozen_after_rows < currow) offscr_sc_rows++;
-        else if (offscr_sc_rows + rows - 1 - numbef - num_frozen_after_rows > currow) offscr_sc_rows--;
-        else break;
-        //goto count;
+        } else if (offscr_sc_rows - fmtbef - 1 == currow) { offscr_sc_rows--;
+        } else if (offscr_sc_rows + rows - 1 - numbef - num_frozen_after_rows < currow) {
+            offscr_sc_rows++;
+            while (row_hidden[offscr_sc_rows] && offscr_sc_rows < maxrows) offscr_sc_rows++;
+        } else if (offscr_sc_rows + rows - 1 - numbef - num_frozen_after_rows > currow) {
+            offscr_sc_rows--;
+            while (offscr_sc_rows && row_hidden[offscr_sc_rows]) offscr_sc_rows--;
+        } else break;
     }
-    //sc_debug("OU off:%d rows%d RESROW:%d fmtbef:%d fmtaft:%d currow:%d maxrows:%d numbef:%d", offscr_sc_rows, rows, -RESROW, -fmtbef, fmtaft, currow, maxrows, numbef);
-    //if (num_frozen_after_rows) sc_debug("rows:%d off:%d, mxrow:%d, maxrows:%d aft:%d", rows-num_frozen_after_rows, offscr_sc_rows, offscr_sc_rows+rows-num_frozen_after_rows-1, maxrows, num_frozen_after_rows);
+    if (changed != offscr_sc_rows) goto count;
+    //sc_info("1.OU off:%d rows%d RESROW:%d fmtbef:%d fmtaft:%d currow:%d maxrows:%d numbef:%d", offscr_sc_rows, rows, -RESROW, -fmtbef, fmtaft, currow, maxrows, numbef);
     return rows - num_frozen_after_rows - numbef;
 }
 
@@ -2397,15 +2401,18 @@ int calc_offscr_sc_cols() {
 
     // pick up col counts
     // col : number of NCURSES screen columns counted (for entire grid). must be <= COLS
-    // cols : number de sc cols shown on grid
+    // cols : number de sc cols shown on grid. if you have hidden rows, those get counted.
     // fmtbef : number of NCURSES screen lines (because of frozen cols) before offscr_sc_cols
-    //countc:
+    countc:
     for (i = 0, cols = 0, fmtbef = 0, col = rescol, numbef = 0; i < maxcols && col + fwidth[i] <= COLS; i++) {
         if (offscr_sc_cols - fmtbef + cols > maxcols) {
             return cols - num_frozen_after_cols - numbef; // FIXME -2
             break;
         }
-        if (col_hidden[i]) continue;
+        if (col_hidden[i]) {
+            if (i >= offscr_sc_cols) cols++;
+            continue;
+        }
         if (col_frozen[i] || i >= offscr_sc_cols) {
             cols++;
             col += fwidth[i];
@@ -2437,17 +2444,21 @@ int calc_offscr_sc_cols() {
         //cols--;
     }
 
+    int changed = offscr_sc_cols;
     while ( offscr_sc_cols + cols - 1 - numbef - num_frozen_after_cols < curcol || curcol < offscr_sc_cols) {
         if (offscr_sc_cols - fmtbef + cols > maxcols) {
             if (col == COLS) offscr_sc_cols++;
             break;
-        }
-        else if (offscr_sc_cols - fmtbef - 1 == curcol) { offscr_sc_cols--; }
-        else if (offscr_sc_cols + cols - 1 - numbef - num_frozen_after_cols < curcol) offscr_sc_cols++;
-        else if (offscr_sc_cols + cols - 1 - numbef - num_frozen_after_cols > curcol) offscr_sc_cols--;
-        else break;
-        //goto countc;
+        } else if (offscr_sc_cols - fmtbef - 1 == curcol) { offscr_sc_cols--;
+        } else if (offscr_sc_cols + cols - 1 - numbef - num_frozen_after_cols < curcol) {
+            offscr_sc_cols++;
+            while (col_hidden[offscr_sc_cols] && offscr_sc_cols < maxcols) offscr_sc_cols++;
+        } else if (offscr_sc_cols + cols - 1 - numbef - num_frozen_after_cols > curcol) {
+            offscr_sc_cols--;
+            while (offscr_sc_cols && col_hidden[offscr_sc_cols]) offscr_sc_cols--;
+        } else break;
     }
+    if (changed != offscr_sc_cols) goto countc;
     //sc_info("maxcol. off:%d cols:%d numb:%d numa:%d col:%d COLS:%d", offscr_sc_cols, cols, numbef, num_frozen_after_cols, col, COLS);
     return cols - num_frozen_after_cols - numbef;
 }
