@@ -31,6 +31,8 @@ handle undoing changes in row height produced by string input
 fix old sc bug - issue #371
 changed input bar from window to pad: permits entering string longer than COLS
 fix when saving sc files of cells that has some string expressions - issue #541
+@count counts cells with strings as well, and not just with numbers
+ignore SIGWINCH outside ncurses
 
 
 Pending
